# surface-change-monitor

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
scripts/: acquire_data.py  download_hrl.py  download_hrl_2021.py  extract_patches.py  generate_validation.py  run_inference.py  train_model.py
surface_change_monitor/: auth.py  cloud_mask.py  composite.py  config.py  download.py  indices.py  pipeline.py  postprocess.py  stac.py  validate.py
surface_change_monitor/labels/: change.py  hrl.py  nlcd.py
surface_change_monitor/model/: dataset.py  predict.py  train.py
tests/: conftest.py  test_auth.py  test_cloud_mask.py  test_composite.py  test_config.py  test_download.py  test_indices.py  test_pipeline.py  test_postprocess.py  test_stac.py  test_validate.py
tests/test_labels/: test_change.py  test_hrl.py  test_nlcd.py
tests/test_model/: test_dataset.py  test_predict.py  test_train.py
